--- a/client/src/index.html
+++ b/client/src/index.html
@@ -16,6 +16,9 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900"
         rel="stylesheet">
 
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
   <app-root></app-root>
